2005-03-04  Marc Singer  <elf@buici.com>

	* scripts/envmagic: Removed undesirable paths from the find.
	
2005-03-03  Marc Singer  <elf@buici.com>

	* src/lib/png.c (read_png_row): Decoder working properly with the
	logo and with cc. 

	* src/lib/zlib.c: Fixed the zlib declarations s.t. there is no
	initialized, mutable data.

	* src/lib/png.c: Added png interpreter for the sake of splash
	screen images.

	* src/lib/zlib.c: Added zlib decompressor.  Modified code to
	comply with data section standards of APEX.

2005-02-24  Marc Singer  <elf@buici.com>

	* src/mach-ixp42x/initialize.c: detection of the chip size from
	the config parameters.  All fat slugs should be simple settings in
	the config.

2005-02-23  Marc Singer  <elf@buici.com>

	* src/mach-lh7952x/drv-emac.c, src/apex/cmd-copy.c: Work-around
	for gcc-2.95 preprocessor bug.

2005-02-22  Marc Singer  <elf@buici.com>

	* src/drivers/drv-fat.c (fat_open): Typo prevented reading from
	any partition other than 1.

	* src/drivers/drv-mem.c (memory_init): Reorganized the
	configuration of SDRAM s.t. it is cleaner in the configuration
	file and controlled by a mach- specific header.  This make it
	easier to make sure the initialization is correct.

2005-02-21  Marc Singer  <elf@buici.com>

	* Makefile (SUBLEVEL): rolled to 1.1.0 for release with
	Milestone2.  Yipee!

	* src/mach-lh7952x/drv-emac.c: Cleanup of the driver.  Better
	control over compile options.  Added help and report features.
 
2005-02-20  Marc Singer  <elf@buici.com>

	* Makefile Revision in preparation for milestone2 release.

	* src/mach-lh7952x/drv-nor-cfi.c (NOR_1_LENGTH): added logic
	necessary to support the double bank of NOR flash on the LPD79524
	boards.
	(nor_init_chip): Changed initialization to properly cope with two
	banks (or a pair of identical chips).

2005-02-19  Marc Singer  <elf@buici.com>

	* src/arch-arm/lib/lib1funcs.S: Imported this file from kernel in
	order to get general purpose integer divide and modulo functions.
	